KOKU-658 implemented, PYH improvements started (KOKU-675)